<resources>
    <string name="app_name">Project_POCU</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_wate_food">About waste food</string>
    <string name="about_waste_food">About waste food</string>
    <string name="contact">Contact</string>
    <string name="navigation_drawer_open">open navigation drawer</string>

    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="slogan">You can now save the planet by doing the simplest thing on earth. Eating.</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="already_have_an_account_login_here">Already have an account login here</string>
    <string name="about_fragment">About Fragment</string>
    <string name="please_login_to_continue">Please Login to continue</string>
    <string name="login_as_admin">Login as admin</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_product_quantity">Enter Product Quantity</string>
    <string name="enter_product_image_link">Enter Product Image Link</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="add_your_product">Add Your Product</string>
    <string name="update_your_n_product">Update Your \n Product</string>
    <string name="delete_your_n_product">Delete Your \n Product</string>

</resources>