<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/deep_space_sparkle"
    tools:context=".Fragments.UpdateAndDeleteProductFragment">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/toolbar_update_product_header"
        layout="@layout/toolbar_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_update_product_header"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_name_til"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_product_name"
            android:padding="5dp"
            android:textColorHint="@color/aero_blue"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/aero_blue"
                android:textColorHint="@color/aero_blue"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--edit text for course price-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_price_til"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_product_price"
            android:padding="5dp"
            android:textColorHint="@color/aero_blue"
            app:boxStrokeColor="@color/purple_200"
            app:hintTextColor="@color/aero_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColor="@color/aero_blue"
                android:textColorHint="@color/aero_blue"
                android:textSize="14sp"
                app:boxStrokeColor="@color/purple_200" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--edit text for course suited for-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_quantity_til"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_product_quantity"
            android:padding="5dp"
            android:textColorHint="@color/aero_blue"
            app:hintTextColor="@color/aero_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/aero_blue"
                android:textColorHint="@color/aero_blue"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--edit text for course image link-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/image_product_til"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_product_image_link"
            android:padding="5dp"
            android:textColorHint="@color/aero_blue"
            app:hintTextColor="@color/aero_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/image_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/aero_blue"
                android:textColorHint="@color/aero_blue"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--edit text for course description-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_description_til"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/enter_product_description"
            android:padding="5dp"
            android:textColorHint="@color/aero_blue"
            app:hintTextColor="@color/aero_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textImeMultiLine|textMultiLine"
                android:textColor="@color/aero_blue"
                android:textColorHint="@color/aero_blue"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/layout_margin_30"
            android:weightSum="2">

            <!--button for updating a new product-->
            <Button
                android:id="@+id/update_product_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_back"
                android:text="@string/update_your_n_product"
                android:textAllCaps="false" />

            <!--button for deleting a course-->
            <Button
                android:id="@+id/delete_product_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_back"
                android:text="@string/delete_your_n_product"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>

    <!--progress bar for displaying a loading indicator-->
    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:visibility="gone" />

</RelativeLayout>

</ScrollView>