<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_space_sparkle"
    tools:context=".Fragments.LoginFragment">

    <include
        android:id="@+id/toolbar_header"
        layout="@layout/toolbar_back" />

    <TextView
        android:id="@+id/id_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="70dp"
        android:gravity="center"
        android:text="Login"
        android:textColor="@color/pewter_blue"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbar_header" />-->

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_20"
        android:layout_marginTop="@dimen/layout_margin_80"
        android:layout_marginRight="@dimen/layout_margin_20"
        android:background="@drawable/button_login"
        android:drawableStart="@drawable/ic_username"
        android:gravity="bottom"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="@dimen/padding"
        android:textColor="@color/dark_slate_gray"
        android:textColorHint="@color/dark_slate_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_title" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_20"
        android:layout_marginTop="@dimen/layout_margin_30"
        android:layout_marginRight="@dimen/layout_margin_20"
        android:background="@drawable/button_login"
        android:drawableStart="@drawable/ic_password"
        android:gravity="bottom"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="@dimen/padding"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_slate_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_20"
        android:layout_marginTop="@dimen/layout_margin_20"
        android:layout_marginRight="@dimen/layout_margin_20"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="login"
        android:textColor="@color/dark_slate_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/register_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_20"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="@color/pewter_blue"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="135dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_as_admin"
        android:textColor="@color/pewter_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>