<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_space_sparkle"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <include
        android:id="@+id/toolbar_register"
        layout="@layout/toolbar_back" />

    <TextView
        android:id="@+id/id_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layour_margin_70"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/pewter_blue"
        android:textSize="@dimen/text_size_40"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register" />-->

    <EditText
        android:id="@+id/username_field_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_20"
        android:layout_marginTop="@dimen/layout_margin_80"
        android:layout_marginRight="@dimen/layout_margin_20"
        android:background="@drawable/button_login"
        android:drawableStart="@drawable/ic_username"
        android:gravity="bottom"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:textColor="@color/pewter_blue"
        android:textColorHint="@color/deep_space_sparkle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_title" />

    <EditText
        android:id="@+id/password_field_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_20"
        android:layout_marginTop="@dimen/layout_margin_30"
        android:layout_marginRight="@dimen/layout_margin_20"
        android:background="@drawable/button_login"
        android:drawableStart="@drawable/ic_password"
        android:gravity="bottom"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:textColor="@color/pewter_blue"
        android:textColorHint="@color/deep_space_sparkle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_field_register" />

    <EditText
        android:id="@+id/confirm_password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_20"
        android:layout_marginTop="@dimen/layout_margin_30"
        android:layout_marginRight="@dimen/layout_margin_20"
        android:background="@drawable/button_login"
        android:drawableStart="@drawable/ic_password"
        android:gravity="bottom"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        android:padding="@dimen/padding"
        android:textColor="@color/pewter_blue"
        android:textColorHint="@color/deep_space_sparkle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field_register" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_20"
        android:layout_marginTop="@dimen/layout_margin_50"
        android:layout_marginRight="@dimen/layout_margin_20"
        android:background="@drawable/button_selector"
        android:enabled="false"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="Register"
        android:textColor="@color/dark_slate_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_field" />

    <TextView
        android:id="@+id/login_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_20"
        android:gravity="center"
        android:text="@string/already_have_an_account_login_here"
        android:textColor="@color/dark_slate_gray"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>